# banco-agil

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  Dockerfile.streamlit  README.md  SDD Agente bancário - Agno.md  Scaffold Agno - Agente bancário inteligente.md  docker-compose.yml  example.env  pyproject.toml  railway.streamlit.json
.claude/skills/create-assistant/: SKILL.md
.claude/skills/vapi-bootstrap-framework/: SKILL.md
.claude/skills/vapi-prompt-builder/: SKILL.md
Agente bancário inteligente - Arquivos/: app.py  credit_tools.py  exchange_tools.py  interview_tools.py  team.py
app/: config.yaml  main.py
app/routers/: kapso_webhook.py  vapi_webhook.py
banco_agil/: _agno_patches.py  config.py  csv_lock.py  media_processing.py  team.py
banco_agil/agents/: __init__.py  cambio.py  credito.py  entrevista.py  triagem.py
banco_agil/channels/: kapso_client.py  kapso_processing.py  vapi_processing.py  vapi_session.py
banco_agil/tools/: __init__.py  auth_tools.py  credit_tools.py  exchange_tools.py  interview_tools.py  session_tools.py
data/: clientes.csv  score_limite.csv  solicitacoes_aumento_limite.csv
docs/: adopt-from-studio.md  create-new-agent.md  eval-and-improve.md  extend-agent.md  improve-agent.md  review-and-improve.md  runbook.md  vapi_assistant_prompt.md
evals/: __main__.py  cases.py
scripts/: generate_jwt_keys.sh  init_db.sql  railway_up.sh  sync_to_studio.py
tests/: conftest.py  test_auth_tools.py  test_credit_tools.py  test_exchange_tools.py  test_interview_tools.py
ui/: api_client.py  streamlit_app.py
(+10 files in other folders)
