[project]
name = "banco-agil"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
  "agno>=2.6.0,<3.0.0",
  "openai>=1.50.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "psycopg[binary,pool]>=3.2.0",
  "pgvector>=0.3.0",
  "sqlalchemy>=2.0.0",
  "pandas>=2.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.9.0",
  "streamlit>=1.40.0",
  "rich>=13.0.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "openinference-instrumentation-agno>=0.1.0",
]

[project.optional-dependencies]
prod = []
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["banco_agil*", "app*", "ui*"]
